dump before I drop a disk

--- a/languages/en/intro.xml
+++ b/languages/en/intro.xml
@@ -13,7 +13,7 @@
   <text key="Hint" text="SECESSION: diving away from a grenade can save your life"/>
   <text key="Hint" text="Melee attacks pass through almost all armour types"/>
   <text key="Hint" text="Sneak into ememy bases and destroy their resources to limit their abilities on the battlefield"/>
-  <text key="Hint" text="The boundaries of capturable areas are marked on the map with a dotted outline"/>
+  <text key="Hint" text="The boundaries of capturable areas are shown as dotted outlines on the map"/>
   <text key="Hint" text="SECESSION: Capturing a base requires a 2/3 majority of troops to begin the timer"/>
   <text key="Hint" text="Several heavy weapons require you to be prone or behind low cover before they can be fired"/>
   <text key="Hint" text="Some LifeCraft weapons are designed to heal, not harm"/>
