--- a/languages/en/intro.xml
+++ b/languages/en/intro.xml
@@ -9,7 +9,7 @@
   <text key="Hint" text="EMP grenades are highly effective against power armours, such as those worn by BlastCorp troops"/>
   <text key="Hint" text="WyreTek troops utilise powerful radio calls. Deploy radio jammers on the front lines to counter their advantage"/>
   <text key="Hint" text="Use remote-detonated sticky explosives on heavy vehicles and large structures"/>
-  <text key="Hint" text="Backpacks more than 20% full slow you down and affect the accuracy of your weapons"/>
+  <text key="Hint" text="Backpacks over 20% full slow you down and reduce weapon accuracy"/>
   <text key="Hint" text="SECESSION: diving away from a grenade can save your life"/>
   <text key="Hint" text="Melee attacks pass through almost all armour types"/>
   <text key="Hint" text="Sneak into ememy bases and destroy their resources to limit their abilities on the battlefield"/>
